r176 - october, 9, 2009
    * StatutPeer : getCriteriaEnabledForAssociation() ordered by name (trick to
      display 'active member' status first)
    

r175 - october, 9, 2009
    * main.css : style for visited links


r175 - october, 9, 2009
    * r172.sql : cotisation.mis_a_jour_par is not mandatory and can be null
    * schema.yml is up to date
    * propel:build-model
    

r174 - october, 9, 2009
    * MembrePeer.php : doSelectByUsernameAndPassword() > check only active
      members
    

r172 - october, 9, 2009
    * Membre.php : getters to format name, last name and city
    

r171 - october, 9, 2009
    * Membre.php : delete() > pseudo and passwords are set to null
    

r170 - october, 9, 2009
    * MembrePeer : doSelectWithEmailForAssociation() selects only active members
    

r169 - october, 9, 2009
    * MembreForm : fileValidator set a limit of 500 ko
    

r167 - october, 8, 2009
    * MembrePeer.php : doSelectForAssociation() retrieve only active members
    * fixes a bug in user's picture directory which listed disabled members
    

r166 - october, 8, 2009
    * /data/updates/1.1.1-to-1.1.2 : r166.sql > makes membre.pseudo field case
      insensitive
    * piwam-install.sql is up date
    

r165 - october, 8, 2009
    * membre : actions > executeCreatepending > clever determination of
      associationId
    * CompteForm : takes associationId as parameter
    * compte : actions > give associationId as parameter to the form
    

r164 - october, 8, 2009
    * membre : actions > executeAcl > fixes a bug if no credentials has been set
    * membre : actions > _processForm > redirect to ACL form after creation of
      a new member
      

r163 - october, 8, 2009
    * membre : actions > fixes a bug in executeMap
    

r162 - october, 8, 2009
    * membre : security.yml > edit credentials is required to valide a pending
      subscription
      

r161 - october, 8, 2009
    * MembrePeer : doSelectOrderBy() > useless associationId computation has 